fix(kanban): unfold text-overflow fix

--- a/app/styles/modules/kanban/kanban-table.scss
+++ b/app/styles/modules/kanban/kanban-table.scss
@@ -18,7 +18,6 @@ $fold-animation-duration: .1s;
         position: static;
     }
 }
-
 .kanban-table {
     display: flex;
     flex-direction: column;
@@ -34,8 +33,11 @@ $fold-animation-duration: .1s;
             max-width: 60px;
         }
     }
+    .vfold-remove-active,
     .vunfold {
         tg-card,
+        .options,
+        .title,
         .card-placeholder {
             // wait until unfold is completed to start the animation
             animation: card-unfold 0s forwards $fold-animation-duration;
@@ -45,6 +47,9 @@ $fold-animation-duration: .1s;
     }
     .vfold {
         tg-card {
+            display: none;
+        }
+        .kanban-wip-limit {
             display: none;
         }
         .card-placeholder {
